[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.hatch.build.targets.wheel]
packages = ["src/trie"]

[project]
authors = [{ name = "Sam Raker", email = "sam.raker@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
description = "Ergonomic, well-typed tries"
license = "MIT"
license-files = ["LICENSE"]
name = "trie_swizzard"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/swizzard/trie"
